# neraium-core

./: .env.example  .gitignore  Dockerfile  README.md  UPGRADE_NOTES.md  VALIDATION_PLAN.md  _show_summary.py  analyze_results_v2.py  benchmark_calibration.json  check.py  colab_intel_layer.py  colab_neraium_gal2_test.md  core_math_engine_monolith.py  final_summary.py  forecast_models.py  ingest.py  intelligence_layer_json_schema.json  intelligence_layer_monolith.py  lead_time_engine.py  makefile  nano plot_fd004_results.py  neraium_demo_test.py  neraium_events.db  neraium_intelligence_code.md  pilot_regime_shift.json  pilot_results.json  pilot_results_v2.json  pilot_structural_instability.json  pyproject.toml  regime_library.json  regime_store.py  run_ab_gal2_test.py  run_engine.py  run_fd004_test.py  run_intel_layer_tests.py  run_pilot.py  run_upgraded_multinode_test.py  server.py  upgraded_multinode_phase_confusion.csv  upgraded_multinode_quality_report.md  (+5 more)
data/: sample_telemetry.json
docs/: HOW_NERAIUM_IS_DIFFERENT.md  PIPELINE_MAP.md
fd004_outputs_subset/: fd004_real_report.json  fd004_real_rul_map.json  fd004_real_timeseries.csv  hero_unit_timeseries.csv
neraium_core/: __init__.py  alignment.py  anomaly.py  baseline.py  buffer.py  casual.py  casual_graph  casusl_graph  causal.py  causal_attribution.py  causal_graph.py  check_model.py  config.py  data_quality.py  decision_layer.py  demo.py  demo_plot.py  directional.py  early_warning.py  engine.py  entropy.py  fd004_plotting.py  fd004_real.py  fd004_synthetic.py  features.py  forecast_models.py  forecasting.py  geometry.py  graph.py  ingest.py  lead_time.py  logging_utils.py  models.py  pilot_config.py  pilot_schema.py  pipeline.py  regime.py  regime_store.py  replay.py  scoring.py  (+7 more)
neraium_core.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
neraium_ui/: app.py
reports/: fd004_proof_summary.md  fd004_real_run_summary.md
scripts/: build_intelligence_monolith.py  fd004_plot.py  plot_fd004_results.py  run_engine.py  run_fd004_test.py  simulator.py
sii/: .gitignore  README.md  pyproject.toml
sii/api/: server.py
sii/sii/: __init__.py  directional.py  early_warning.py  entropy.py  forecasting.py  geometry.py  graph.py  models.py  normalization.py  regimes.py  scoring.py  service.py  spectral.py  store.py  subsystems.py  telemetry.py  windows.py
sii/tests/: test_api.py  test_directional.py  test_geometry.py  test_scoring.py  test_spectral.py
static/: dashboard.html
tests/: test_adaptive_gal2_fusion.py  test_alignment.py  test_api.py  (+27 more)
(+17 files in other folders)
