[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neraium-core"
version = "0.1.0"
description = "Neraium core engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pydantic>=2",
  "fastapi>=0.110",
  "uvicorn>=0.29",
]

[project.optional-dependencies]
test = [
  "pytest",
  "httpx",
]
dev = [
  "pytest",
  "httpx",
  "ruff",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["neraium_core*"]
exclude = ["apps*", "tests*", "scripts*", "sii*"]

[tool.pytest.ini_options]
pythonpath = ["."]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
