[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sii"
version = "0.1.0"
description = "Systemic Infrastructure Intelligence platform"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "networkx",
  "scikit-learn",
  "pydantic>=2",
  "fastapi",
  "uvicorn",
]

[project.optional-dependencies]
dev = ["pytest", "httpx", "ruff"]

[tool.setuptools]
packages = ["sii", "api"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100

